base/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-app
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-app
  template:
    metadata:
      labels:
        app: keycloak-app
    spec:
      containers:
        - name: keycloak-app
          image: quay.io/keycloak/keycloak:26.2
#          resources:
#            requests:
#              memory: "12Mi"
#              cpu: "2m"
#            limits:
#              memory: "32Mi"
#              cpu: "50m"
          args: ["start", "--log-level=DEBUG"]
          ports:
            - containerPort: 8080
