base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
spec:
  selector:
    app: keycloak-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
