base/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress-route
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`10.150.247.30`) && PathPrefix("/auth")
      services:
        - name: keycloak-service
          port: 80
#      middlewares:
#        - name: keycloak-strip-middleware
